--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mini-css-extract-plugin": "1.3.3",
     "node-sass": "5.0.0",
     "sass-loader": "10.1.0",
+    "sass-sourcemap-loader": "^0.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
